# cummybot

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml
src/: app_channel.rs  discord.rs  main.rs  runtime.rs
src/discord/: corvy.rs  daniel.rs  mod.rs
src/jerk/: mod.rs
